# LTS_scan

./: .gitignore  README.md  hosts.txt  main.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
lts_scan/: scanner.py
tests/: test_cli.py
