[tool.poetry]
name = "lts-scan"
version = "0.1.2"
description = ""
authors = ["Alexandre Meline. <alexandre.meline.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.11.16"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"

[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.scripts]
lts-scan = "lts_scan.cli:main"